--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "@vercel/analytics": "^1.0.0",
+    "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "10.4.14",
     "bright": "^1.0.0",
     "contentlayer": "^0.3.2",
