--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.16.1",
     "@types/papaparse": "^5.3.15",
@@ -25,7 +26,6 @@
     "next": "13.4.1",
     "next-contentlayer": "^0.3.2",
     "next-themes": "^0.2.1",
-    "papaparse": "^5.5.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
