--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/chroma-js": "^3.1.1",
     "@types/node": "18.16.1",
     "@types/papaparse": "^5.3.15",
     "@types/react": "18.2.0",
@@ -20,6 +21,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "10.4.14",
     "bright": "^1.0.0",
+    "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "contentlayer": "^0.3.2",
     "eslint": "8.39.0",
