--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,19 +25,23 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
+
+    - name: Pull Vercel Environment Variables
+      env:
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      run: |
+        npm install -g vercel
+        vercel env pull .env.local --yes --environment=production
     
     - name: Run tests
       run: npm test
 
-    # - name: Build project
-    #   run: npm run build
-
     - name: Deploy to Vercel
+      if: success()
       env:
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       run: |
-        npm install --global vercel@latest
-        vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-        vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-        vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        npm install -g vercel
+        vercel --prod --confirm
