--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,9 @@ jobs:
       run: npm ci
 
     - name: Pull Vercel Environment Variables
-      env:
-        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       run: |
         npm install -g vercel
-        vercel env pull .env.local --yes --environment=production
+        vercel env pull .env.local --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
     
     - name: Run tests
       run: npm test
@@ -44,4 +42,4 @@ jobs:
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       run: |
         npm install -g vercel
-        vercel --prod --confirm
+        vercel --prod --confirm --token=${{ secrets.VERCEL_TOKEN }}
