--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,20 +26,16 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Pull Vercel Environment Variables
-      run: |
-        npm install -g vercel
-        vercel env pull .env.local --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-    
     - name: Run tests
       run: npm test
 
     - name: Deploy to Vercel
       if: success()
       env:
-        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       run: |
-        npm install -g vercel
-        vercel --prod --confirm --token=${{ secrets.VERCEL_TOKEN }}
+        npm install -g vercel@latest
+        vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
