--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
-    
-    - name: Install pnpm
-      run: npm install -g pnpm
+
+    - name: Enable corepack
+      run: corepack enable
 
     - name: Install dependencies
       run: pnpm install
