--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Enable corepack
-      run: corepack enable
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 9
 
     - name: Install dependencies
       run: pnpm install
@@ -41,3 +42,4 @@ jobs:
         vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
         vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
         vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        
