--- a/package.json
+++ b/package.json
@@ -14,42 +14,53 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/chroma-js": "^3.1.1",
-    "@types/node": "18.16.1",
+    "@types/node": "22.13.8",
     "@types/papaparse": "^5.3.15",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "@vercel/analytics": "^1.0.0",
-    "@vercel/speed-insights": "^1.1.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.14",
     "bright": "^1.0.0",
     "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
-    "contentlayer": "^0.3.2",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.4.1",
+    "contentlayer": "^0.3.4",
+    "eslint": "9.21.0",
+    "eslint-config-next": "15.2.0",
+    "marked": "^15.0.7",
+    "next": "15.2.0",
     "next-auth": "^4.24.11",
-    "next-contentlayer": "^0.3.2",
+    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^9.0.3",
-    "recharts": "2.7.2",
-    "simple-icons": "^14.0.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-markdown": "^9.1.0",
+    "recharts": "2.15.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-react": "^8.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "simple-icons": "^14.8.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.8.2",
+    "unified": "^11.0.5",
+    "vfile": "^6.0.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.6",
+    "@testing-library/dom": "^10.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/marked": "^6.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.2.6"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
